fix homepage social block logos not aligning properly on phone sizes close #25

--- a/sites/all/themes/onedge/css/importer.css
+++ b/sites/all/themes/onedge/css/importer.css
@@ -508,6 +508,9 @@ textarea {
     background-size: 24px 24px; }
     .block--home-social .fb:hover, .block--home-social .ig:hover {
       color: #26d0b6; }
+    @media (max-width: 640px) {
+      .block--home-social .fb, .block--home-social .ig {
+        display: block; } }
   .block--home-social .fb {
     background-image: url(../images/icon-fb-black.svg); }
     .block--home-social .fb:hover {
