--- a/sites/all/themes/onedge/sass/pages/_home.scss
+++ b/sites/all/themes/onedge/sass/pages/_home.scss
@@ -218,6 +218,13 @@
     {
       color: #26d0b6;
     }
+    &
+    {
+      @media (max-width: 640px)
+      {
+        display: block;
+      }
+    }
   }
   .fb
   {
